--- a/chaipen/Base.lproj/LaunchScreen.storyboard
+++ b/chaipen/Base.lproj/LaunchScreen.storyboard
@@ -18,12 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iTunesArtwork" translatesAutoresizingMaskIntoConstraints="NO" id="h5A-6i-xD0">
-                                <rect key="frame" x="0.0" y="212.66666666666663" width="375" height="397"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="397" id="iaO-az-gus"/>
-                                </constraints>
-                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Bitmap" translatesAutoresizingMaskIntoConstraints="NO" id="P48-xH-8U3">
                                 <rect key="frame" x="67" y="730" width="240" height="28"/>
                                 <constraints>
@@ -31,10 +25,17 @@
                                     <constraint firstAttribute="width" constant="240" id="qoG-Jn-PQ3"/>
                                 </constraints>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iTunesArtwork" translatesAutoresizingMaskIntoConstraints="NO" id="h5A-6i-xD0">
+                                <rect key="frame" x="0.0" y="223" width="375" height="376"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="376" id="758-TM-H3G"/>
+                                    <constraint firstAttribute="width" constant="375" id="EyQ-sg-Unq"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.10588235294117647" green="0.65490196078431373" blue="0.8901960784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="h5A-6i-xD0" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="13P-3k-Vc8"/>
+                            <constraint firstItem="h5A-6i-xD0" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="4IG-Cg-rg7"/>
                             <constraint firstItem="h5A-6i-xD0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QoO-hT-UeW"/>
                             <constraint firstItem="P48-xH-8U3" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="XJZ-hL-wnB"/>
                             <constraint firstAttribute="trailing" secondItem="h5A-6i-xD0" secondAttribute="trailing" id="a7r-CN-hSU"/>
@@ -46,7 +47,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52" y="374.66266866566718"/>
+            <point key="canvasLocation" x="52" y="374.6305418719212"/>
         </scene>
     </scenes>
     <resources>
